changed file names

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Evie Wilcock</title>
-    <link rel="stylesheet" href="index3.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/5f6f4a6f86.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,9 +78,9 @@
         </section>
         <!-- SECTION THREE:PROJECTS ---------------------->
         <section id="portfolio" class="section text-white">
-            <h2 class="text-5xl font-semibold pt-14">My Work</h2>
+            <h2 class="text-5xl font-semibold pt-14">Portfolio</h2>
             <p class="text-white m-auto font-normal pb-3">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, veniam amet odit placeat eius eveniet sequi perferendis, voluptatum laudantium exercitationem, officia tenetur labore molestias aperiam adipisci? Minima reiciendis cumque ipsum.
+                Welcome to my portfolio! Click on any project below to delve deeper into the details, view additional screenshots, and discover which technologies I utilised. Stay tuned for more projects in the future!
             </p>
             <div class="project-container mt-4 mb-1">
                 <i class="fa-sharp fa-solid fa-angle-left"></i>
@@ -90,9 +90,8 @@
                     </div>
                     <h3 class="font-semibold">PERSONAL WEBSITE</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum voluptatum aliquam quo tempore cupiditate optio.
+                        This project serves as my personal website, highlighting skills and achievements for potential employers.
                     </p>
-                    <a class="font-semibold" href="projects.html">READ MORE</a>
                 </div>
                 <div class="project">
                     <div class="image-container">
@@ -100,10 +99,8 @@
                     </div>
                     <h3 class="font-semibold">PERSONAL WEBSITE</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum voluptatum aliquam quo tempore cupiditate optio.
+                        This project serves as my personal website, highlighting skills and achievements for potential employers.
                     </p>
-                    <a class="font-semibold" href="projects.html">READ MORE</a>
-
                 </div>
                 <div class="project">
                     <div class="image-container">
@@ -111,9 +108,8 @@
                     </div>
                     <h3 class="font-semibold">PERSONAL WEBSITE</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum voluptatum aliquam quo tempore cupiditate optio.
+                        This project serves as my personal website, highlighting skills and achievements for potential employers.
                     </p>
-                    <a class="font-semibold" href="projects.html">READ MORE</a>
                 </div>
                 <div class="project hidden-project">
                     <div class="image-container">
@@ -121,9 +117,9 @@
                     </div>
                     <h3 class="font-semibold">PERSONAL WEBSITE</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum voluptatum aliquam quo tempore cupiditate optio.
+                        This project serves as my personal website, highlighting skills and achievements for potential employers.
                     </p>
-                    <a class="font-semibold" href="projects.html">READ MORE</a>
+                    <!-- <a class="font-semibold" href="projects.html">READ MORE</a> -->
                 </div>
                 <i class="fa-solid fa-angle-right text-white"></i>
             </div>
