--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <a href="https://de.linkedin.com/in/evie-wilcock" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
-        <div class="footer-right">&copy; Evie Wilcock 2024</div>
+        <div class="footer-right">&copy; 2024 Evie Wilcock</div>
     </footer>
 
 
