--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="home" class="section text-white">
             <h1 class="text-8xl font-medium">Hello, I'm Evie.</h1>
             <h2 class="text-8xl font-medium">Full-Stack Web Developer</h2>
-            <h3 class="text-3xl mt-6 w-6/12">Welcome to my personal website, here you will find out about me, my projects, previous education and experience and skills, and how to get in touch!
+            <h3 class="text-3xl mt-6 w-6/12">Welcome to my personal website, here you will find out about me, my projects, previous education, experience & skills, and how to get in touch.
             </h3>
 
         </section>
